# tbsprpg_sdl

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.ini  game.c  game.h  main.c
audio/: audio.c  audio.h
audio/sdl/: audio_sdl.c  audio_sdl.h
game/: game.c  game.h
game/sdl/: game_sdl.c  game_sdl.h
game/sfml/: game_sfml.c  game_sfml.h
google_tests/: CMakeLists.txt
google_tests/utilities/mem_manager/: mem_pool_tests.cpp
input/: input.c  input.h
input/sdl/: input_sdl.c  input_sdl.h
input/sfml/: input_sfml.c  input_sfml.h
render/: render.c  render.h
render/sdl/: render_sdl.c  render_sdl.h  render_sdl_sw.c  render_sdl_sw.h  sdl_utils.c  sdl_utils.h
render/sfml/: render_sfml.c  render_sfml.h
simulation/: simulation.c  simulation.h
utilities/: defines.h  geometry.h  hashmap.h  ini_config.h  logger.h  mem_manager.h  strutils.h  threading.h  timing.h
utilities/ini_config/: ini_config.c
utilities/logger/: logger.c
utilities/mem_manager/: mem_manager.c  mem_pool.c  mem_pool.h
utilities/strutils/: strutils.c
utilities/threading/: threading.c
utilities/timing/: timing.c
utilities/types/: hashmap.c
